K8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: java-service
  namespace: java-app
spec:
  selector:
    app: java-app
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
